注单历史页面功能调试

--- a/project/yazhou-h5/src/i18n/zh-cn/index.json
+++ b/project/yazhou-h5/src/i18n/zh-cn/index.json
@@ -2014,7 +2014,7 @@
     ]
   },
   "time": {
-    "monthes": ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"],
+    "monthes": "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]",
     "time_date_1": "%month月%date日",
     "time_date_2": "%s月%s日 (%s)",
     "time_date_3": "%s月%s日 %s:%s",
