--- a/src/i18n/h5/th-th/index.json
+++ b/src/i18n/h5/th-th/index.json
@@ -859,6 +859,7 @@
   },
   "list_title": {
     "1": {
+      
       "title": [
         "1X2",
         "แฮนดิแคป",
@@ -869,33 +870,43 @@
       ]
     },
     "2": {
+      
       "title": ["Moneyline", "แฮนดิแคป", "คะแนนรวม"]
     },
     "3": {
+      
       "title": ["ผู้ชนะ", "แฮนดิแคป", "รันทั้งหมด"]
     },
     "4": {
+      
       "title": ["1X2", "แฮนดิแคป", "ประตูรวม"]
     },
     "5": {
+      
       "title": ["ผู้ชนะ", "เซ็ตแฮนดิแคป", "เกมแฮนดิแคป"]
     },
     "6": {
+      
       "title": ["Moneyline", "แฮนดิแคป", "ประตูรวม"]
     },
     "7": {
+      
       "title": ["ผู้ชนะ", "เฟรมแฮนดิแคป", "รวมเฟรม"]
     },
     "8": {
+      
       "title": ["ผู้ชนะ", "แฮนดิแคป", "คะแนนรวม"]
     },
     "9": {
+      
       "title": ["ผู้ชนะ", "คะแนนแฮนดิแคป", "คะแนนรวม"]
     },
     "10": {
+      
       "title": ["ผู้ชนะ", "คะแนนแฮนดิแคป", "คะแนนรวม"]
     },
     "11": {
+      
       "title": [
         "1x2",
         "แฮนดิแคป",
@@ -906,12 +917,15 @@
       ]
     },
     "12": {
+      
       "title": ["1X2", "รอบรวม"]
     },
     "13": {
+      
       "title": ["ผู้ชนะ", "แฮนดิแคป", "คะแนนรวม"]
     },
     "14": {
+      
       "title": [
         "1x2",
         "แฮนดิแคป",
@@ -922,6 +936,7 @@
       ]
     },
     "15": {
+      
       "title": [
         "1X2",
         "แฮนดิแคป",
@@ -932,6 +947,7 @@
       ]
     },
     "16": {
+      
       "title": [
         "1x2",
         "แฮนดิแคป",
@@ -941,21 +957,27 @@
       ]
     },
     "100": {
+      
       "title": ["ผู้ชนะการแข่งขัน", "แผนที่แฮนดิแคป", "แผนที่ทั้งหมด"]
     },
     "101": {
+      
       "title": ["ผู้ชนะการแข่งขัน", "แผนที่แฮนดิแคป", "แผนที่ทั้งหมด"]
     },
     "102": {
+      
       "title": ["ผู้ชนะการแข่งขัน", "แผนที่แฮนดิแคป", "แผนที่ทั้งหมด"]
     },
     "103": {
+      
       "title": ["ผู้ชนะการแข่งขัน", "แผนที่แฮนดิแคป", "แผนที่ทั้งหมด"]
     },
     "1001": {
+      
       "title": ["1x2", "แฮนดิแคป", "ทายผลประตูรวม"]
     },
     "1004": {
+      
       "title": ["Moneyline", "แฮนดิแคป", "คะแนนรวม", "ได้ 21 แต้ม"]
     }
   },
@@ -1359,7 +1381,7 @@
       "304": "Game 5",
       "999": "จบการแข่งขัน"
     },
-
+    
     "11": {
       "0": "1H",
       "6": "1H",
@@ -1378,9 +1400,11 @@
       "120": "สิ้นสุดการยิงจุดโทษ",
       "999": "จบการแข่งขัน"
     },
-
-    "12": {},
-
+    
+    "12": {
+      
+    },
+    
     "13": {
       "0": "ยังไม่เริ่ม",
       "8": "Set 1",
@@ -1409,7 +1433,7 @@
       "442": "Set 7",
       "999": "จบการแข่งขัน"
     },
-
+    
     "14": {
       "0": "ยังไม่เริ่ม",
       "6": "1H",
@@ -1432,7 +1456,7 @@
       "444": "หมดเวลาทำงาน",
       "999": "จบเกม"
     },
-
+    
     "15": {
       "0": "ยังไม่เริ่ม",
       "6": "1H",
@@ -1461,7 +1485,7 @@
       "444": "หมดเวลาทำงาน",
       "999": "จบเกม"
     },
-
+    
     "16": {
       "0": "ยังไม่เริ่ม",
       "13": "Q1",
@@ -1479,7 +1503,7 @@
       "303": "Q4",
       "999": "จบเกม"
     },
-
+    
     "100": {
       "0": "Game 1",
       "1": "Game 1",
@@ -1494,7 +1518,7 @@
       "10": "Game 10",
       "11": "Game 11"
     },
-
+    
     "101": {
       "0": "Game 1",
       "1": "Game 1",
@@ -1509,7 +1533,7 @@
       "10": "Game 10",
       "11": "Game 11"
     },
-
+    
     "102": {
       "0": "Game 1",
       "1": "Game 1",
@@ -1524,7 +1548,7 @@
       "10": "Game 10",
       "11": "Game 11"
     },
-
+    
     "103": {
       "0": "Game 1",
       "1": "Game 1",
@@ -1981,8 +2005,9 @@
     "1010": "VRมอเตอร์ไซค์",
     "1011": "VRจักรยานวิบาก"
   },
-
+  
   "sport_head_play_category": {
+    
     "1": [
       "1X2",
       "แฮนดิแคป",
@@ -1991,25 +2016,25 @@
       "แฮนดิแคป - รอบ 1",
       "สูง/ต่ำ 1"
     ],
-
+    
     "2": ["ทีมชนะเลิศ", "ชุดแฮนดิแคป", "เกมแฮนดิแคป"],
-
+    
     "3": ["ทีมชนะเลิศ", "แฮนดิแคป", "คะแนนรวม"],
-
+    
     "4": ["1X2", "แฮนดิแคป", "บนล่าง"],
-
+    
     "5": ["1X2", "แฮนดิแคป", "บนล่าง"],
-
+    
     "6": ["1X2", "แฮนดิแคป", "บนล่าง"],
-
+    
     "7": ["ทีมชนะเลิศ", "รอบทั้งหมด"],
-
+    
     "8": ["ทีมชนะเลิศ", "แฮนดิแคป", "จำนวนเกมทั้งหมด"],
-
+    
     "9": ["ทีมชนะเลิศ", "ยอมรับแผนที่", "แผนที่ทั้งหมด"],
-
+    
     "10": ["ทีมชนะเลิศ", "ยอมรับแผนที่", "แผนที่ทั้งหมด"],
-
+    
     "11": [
       "1x2",
       "แฮนดิแคป",
@@ -2018,7 +2043,7 @@
       "แฮนดิแคป - รอบ 1",
       "สูง/ต่ำ - รอบ 1"
     ],
-
+    
     "12": [
       "1X2",
       "แฮนดิแคป",
@@ -2093,6 +2118,18 @@
     "sorry": "ขออภัย ไม่สามารถดาวน์โหลดแหล่งที่มาได้ชั่วคราว",
     "nohandle": "วิดีโอจะหยุดชั่วคราวหากคุณไม่ได้เล่นเป็นเวลานาน หากต้องการดูต่อ โปรดคลิกเล่นอีกครั้ง",
     "video_line": "สตรีมมิ่งวิดีโอ"
+  },
+  "new_menu": {
+    "1": "ในการแข่งขัน",
+    "2": "วันนี้",
+    "3": "ล่วงหน้า",
+    "4": "เดิมพันสุดท้าย",
+    "5": "即将开赛",
+    "6": "พาร์เลย์",
+    "7": "Esports",
+    "8": "VR",
+    "30": "หวย",
+    "28": "ผลลัพธ์"
   },
   "virtual_sports": {
     "advance": "เข้า",
