--- a/src/i18n/h5/zh-tw/index.json
+++ b/src/i18n/h5/zh-tw/index.json
@@ -842,6 +842,7 @@
   },
   "list_title": {
     "1": {
+      
       "title": [
         "全场獨贏",
         "全場讓球",
@@ -852,33 +853,43 @@
       ]
     },
     "2": {
+      
       "title": ["全場獨贏", "讓分", "總分"]
     },
     "3": {
+      
       "title": ["全場獨贏", "讓分", "總分"]
     },
     "4": {
+      
       "title": ["全场獨贏", "全場讓球", "全場大小"]
     },
     "5": {
+      
       "title": ["獨贏", "讓盤", "讓局"]
     },
     "6": {
+      
       "title": ["全场獨贏", "全場讓球", "全場大小"]
     },
     "7": {
+      
       "title": ["獨贏", "讓局", "總局數"]
     },
     "8": {
+      
       "title": ["獨贏", "讓分", "總分"]
     },
     "9": {
+      
       "title": ["獨贏", "讓分", "總分"]
     },
     "10": {
+      
       "title": ["獨贏", "讓分", "總分"]
     },
     "11": {
+      
       "title": [
         "全场独赢",
         "全場讓球",
@@ -889,12 +900,15 @@
       ]
     },
     "12": {
+      
       "title": ["全场独赢", "總回合數"]
     },
     "13": {
+      
       "title": ["獨贏", "讓分", "總分"]
     },
     "14": {
+      
       "title": [
         "全場獨贏",
         "全場讓分",
@@ -905,6 +919,7 @@
       ]
     },
     "15": {
+      
       "title": [
         "全場獨贏",
         "全場讓球",
@@ -915,24 +930,31 @@
       ]
     },
     "16": {
+      
       "title": ["全場獨贏", "全場讓分", "全場總分", "半場獨贏", "半場讓分"]
     },
     "100": {
+      
       "title": ["全域獲勝", "地圖讓分", "地圖總數"]
     },
     "101": {
+      
       "title": ["全域獲勝", "地圖讓分", "地圖總數大小"]
     },
     "102": {
+      
       "title": ["全域獲勝", "地圖讓分", "地圖總數"]
     },
     "103": {
+      
       "title": ["全域獲勝", "地圖讓分", "地圖總數"]
     },
     "1001": {
+      
       "title": ["全場獨贏", "全場讓球", "全場大小"]
     },
     "1004": {
+      
       "title": ["全場獨贏", "讓分", "總分", "達到21分"]
     }
   },
@@ -1334,7 +1356,7 @@
       "304": "第五局",
       "999": "完賽"
     },
-
+    
     "11": {
       "0": "上半場",
       "6": "上半場",
@@ -1353,9 +1375,11 @@
       "120": "點球大戰結束",
       "999": "全場結束"
     },
-
-    "12": {},
-
+    
+    "12": {
+      
+    },
+    
     "13": {
       "0": "未開賽",
       "8": "第一局",
@@ -1384,7 +1408,7 @@
       "442": "第七局",
       "999": "完賽"
     },
-
+    
     "14": {
       "0": "未開賽",
       "6": "上半場",
@@ -1407,7 +1431,7 @@
       "444": "加時賽結束",
       "999": "全場結束"
     },
-
+    
     "15": {
       "0": "未開賽",
       "6": "上半場",
@@ -1436,7 +1460,7 @@
       "444": "加時賽結束",
       "999": "全場結束"
     },
-
+    
     "16": {
       "0": "未開賽",
       "13": "第一節",
@@ -1454,7 +1478,7 @@
       "303": "第四節",
       "999": "全場結束"
     },
-
+    
     "100": {
       "0": "第一局",
       "1": "第一局",
@@ -1469,7 +1493,7 @@
       "10": "第十局",
       "11": "第十一局"
     },
-
+    
     "101": {
       "0": "第一局",
       "1": "第一局",
@@ -1484,7 +1508,7 @@
       "10": "第十局",
       "11": "第十一局"
     },
-
+    
     "102": {
       "0": "第一局",
       "1": "第一局",
@@ -1499,7 +1523,7 @@
       "10": "第十局",
       "11": "第十一局"
     },
-
+    
     "103": {
       "0": "第一局",
       "1": "第一局",
@@ -1956,8 +1980,9 @@
     "1010": "VR摩托車",
     "1011": "VR賽馬"
   },
-
+  
   "sport_head_play_category": {
+    
     "1": [
       "全場獨贏",
       "全場讓球",
@@ -1966,25 +1991,25 @@
       "半場讓球",
       "半場大小"
     ],
-
+    
     "2": ["全場獨贏", "全場讓盤", "全場讓局"],
-
+    
     "3": ["全場獨贏", "全場讓分", "全場總分"],
-
+    
     "4": ["全場獨贏", "全場讓球", "全場大小"],
-
+    
     "5": ["全場獨贏", "全場讓分", "全場總分"],
-
+    
     "6": ["全場獨贏", "全場讓球", "全場大小"],
-
+    
     "7": ["全場獨贏", "總回合數"],
-
+    
     "8": ["全場獨贏", "全場讓局", "總局數"],
-
+    
     "9": ["全局獲勝", "地圖讓分", "地圖總數大小"],
-
+    
     "10": ["全局獲勝", "地圖讓分", "地圖總數"],
-
+    
     "11": [
       "全場獨贏",
       "全場讓分",
@@ -1993,7 +2018,7 @@
       "半場讓分",
       "半場總分"
     ],
-
+    
     "12": [
       "全場獨贏",
       "全場讓分",
@@ -2097,6 +2122,18 @@
     "top_64": "64強",
     "vitality_performance": "活力表現",
     "win_tie_loss": "勝/平/負"
+  },
+  "new_menu": {
+    "1": "滾球",
+    "2": "今日",
+    "3": "早盤",
+    "4": "冠軍",
+    "5": "即将开赛",
+    "6": "串關",
+    "7": "電競",
+    "8": "VR",
+    "30": "競足",
+    "28": "賽果"
   },
   "chatroom": {
     "read_more": "查看更多消息",
