逻辑模板显示补充

--- a/整体逻辑.md
+++ b/整体逻辑.md
@@ -18,11 +18,18 @@
     ===》 根据所在菜单 ==》计算每个赛事显示模板==》计算每个赛事的默认表征，以及列表的数据映射关系
     ===》 累加得出列表高度
     ===》 循环列表的数据映射关系 显示视图基本框架 
+          ==>{
+                  ==》列表数据映射
+                  ==》卡片表征
+                       ==》 显示卡片
+                            ==》赛事的使用模板显示 ，使用数据填坑（也就是哪怕只有一个赛事id 无其他信息，这时候也能显示视图，只是内容全空）
+
+                 }
           ===》刚刚进页面无赔率：注意此时还没有赔率 ，没有用到数据仓库
                这时候把 数据转出一个列表 [{mid:1},{mid:1},{mid:1},{mid:1}]
                调用 数据仓库 方法 拆解赔率玩法对象 ：这个时候只是赔率玩法都是空   
           ===》赔率数据之前有初始化过 ，用到了数据仓库 ，这时候数据仓库有数据 （星号 1）
-
+      
     ===》 视图显示后，计算得出此时的可视区mids
     ===》 调用 bymids 接口 拉取最新赔率
     ===》 bymids 接口 数据 调用 数据仓库 方法 拆解赔率玩法对象
