--- a/数据仓库.md
+++ b/数据仓库.md
@@ -1,8 +1,8 @@
 
  set_list(match_list,config)
  /**
-  *  match_list : [{mid},{mid}]
-  *   config :   { mid_${mid}:{keep:[]},}
+  *   match_list : [{mid},{mid}]
+  *   config :  { mid_${mid}:{keep:[]},}   
   */
 
 
@@ -16,6 +16,7 @@
       方法：    set_list(match_list,config)
                set_active_mids
                set_inactive_mids
+               clear
  }
 
 
