--- a/job/关于动态导入.md
+++ b/job/关于动态导入.md
@@ -2,22 +2,22 @@
 
 ```
 const  { default:json_data} = await import( json_data_path, { assert: { type: "json" }, } );
-  return json_data
-
-```
-
-
 
 
 ```
-const  { default:json_data} = await import( json_data_path, { assert: { type: "json" }, } );
-  return json_data
+
+
+
+
+```
+import { readFile } from "fs/promises";
+const json_data = JSON.parse( await readFile(new URL(json_data_path, import.meta.url)) );
 
 ```
 
 ```
  const { default: MyComponent } = await import('./MyComponent');
- 
+
 ```
 
 ```
