复刻版国际化

--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -1,4 +1,61 @@
 {
+  "app_h5": {
+    "cathectic": {
+      "handicap_tutorial":"盘口教程",
+      "open_bets":"未结注单",
+      "closed_bets":"已结注单",
+      "no_data_pre": "您暂无预约中数据",
+      "no_data_unsettle": "您暂无未结算数据",
+      "no_data_settle": "您暂无已结算数据",
+      "no_data_invalid": "您暂无已失效数据"
+    },
+    "handicap_tutorial": {
+      "football_master": "恭喜，您已进阶为足球大师",
+      "training_camp": "训练营",
+      "actual_combat": "实战来一注",
+      "practise": "模拟先练习",
+      "again": "再学一次",
+      "big_small_ball": "大小球",
+      "big_small_ball_tip": "全场90分钟（含伤停补时）两队进球数的总和",
+      "handicapData_condition": "主客实力相当<br/>均不让球即0（平手盘）",
+      "all_win": "全赢",
+      "home_team": "主队",
+      "bet_home_team": "投注主队",
+      "bet_away_team": "投注客队",
+      "away_team": "客队",
+      "all_lose": "全输",
+      "win_half": "赢一半",
+      "lose_half": "输一半",
+      "tie_handicap": "（平手盘）",
+      "tie_half_plate": "（平手半球盘）",
+      "big_bet": "投注大%s",
+      "small_bet": "投注小%s",
+      "enter_ball": "进球之和",
+      "vice_versa": "反之亦然",
+      "return_principal_discount": "退回本金（打和）",
+      "return_principal": "退回本金",
+      "home_team_handicap": "主队让%s球",
+      "ball_plate_1": "（半球盘）",
+      "ball_plate_2": "（半球/一球盘）",
+      "ball_plate_3": "（一球盘）",
+      "ball_plate_4": "（一球/球半盘）",
+      "ball_plate_5": "（球半盘）",
+      "ball_plate_6": "（球半/两球盘）",
+      "note_1": "主客谁赢球即全赢，打平则退回本金（走水）",
+      "note_3": "主队赢1球或以上，投注主队全赢，投注客队全输",
+      "note_4": "打平，投注主队输一半，投注客队赢一半",
+      "note_5": "主队打平或输球，投注主队全输，投注客队全赢",
+      "note_6": "主队赢1球或以上，投注主队全赢，投注客队输一半",
+      "note_7": "主队赢2球或以上，投注主队全赢，投注客队全输",
+      "note_8": "主队赢1球，投注主客均退回本金（走水）",
+      "note_9": "主队赢1球，投注主队输一半，投注客队赢一半",
+      "note_10": "主队赢1球，投注主队输一半，投注客队全赢",
+      "note_11": "主队赢1球，投注主队全输，投注客队全赢",
+      "note_12": "主队赢2球，投注主队赢一半，投注客队输一半",
+      "note_13": "主队赢3球或以上，投注主队全赢，投注客队全输",
+      "ball": "%s球"
+    }
+  },
   "ac_rules": {
     "auto": "自动接受更好赔率",
     "understand": "我知道了"
