--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -10,6 +10,12 @@
       "no_data_invalid": "您暂无已失效数据",
       "kind_tips": "温馨提示",
       "adjustment_amount": "调整金额",
+      "winnable": "可赢额",
+      "bet_number": "投注单号",
+      "bets": "投注项",
+      "settle": "结算",
+      "bet_status": "注单状态",
+      "cash_failed": "提前兑现失败",
       "cash_rules": "提前兑现规则申明",
       "explain": "<p>开云体育提前兑现只适用于指定赛事和盘口，如遇到赛事或盘口取消，提前兑现注单将会被收回重新结算。开云体育保留赛果最终解释权。</p><p>具体兑现规则请查看【帮助中心】-【开云体育提前兑现规则】</p>",
       "confirm_cancel_reservation": "确定取消本场比赛预约？"
