--- a/src/i18n/h5/th-th/index.json
+++ b/src/i18n/h5/th-th/index.json
@@ -339,6 +339,7 @@
     "virtual_sports": "VRกีฬา",
     "auto_close": "ปิดอัตโนมัติหลังจาก %s วินาที",
     "HD": "HD",
+    "return": "return",
     "SD": "SD"
   },
   "detail": {
