--- a/src/i18n/h5/en-gb/index.json
+++ b/src/i18n/h5/en-gb/index.json
@@ -339,6 +339,7 @@
     "virtual_sports": "VR Sports",
     "auto_close": "Auto close after %s s",
     "HD": "HD",
+    "return": "return",
     "SD": "SD"
   },
   "detail": {
