--- a/src/i18n/h5/es-es/index.json
+++ b/src/i18n/h5/es-es/index.json
@@ -371,6 +371,7 @@
     "title_188": "Vista asiática",
     "title_panda": "Vista Europea",
     "under": "2H",
+    "return": "return",
     "unit": "PS",
     "virtual_sports": "Deportes virtuales"
   },
