国际化翻译

--- a/src/i18n/h5/ms-my/index.json
+++ b/src/i18n/h5/ms-my/index.json
@@ -317,6 +317,7 @@
     "match_no": "Blm tamat"
   },
   "common": {
+    "in_box": "In the box......",
     "all_notice": "All notice",
     "all_select": "All",
     "analysis": "Analisis stats",
