--- a/src/i18n/pc/id-id/index.json
+++ b/src/i18n/pc/id-id/index.json
@@ -318,6 +318,7 @@
 		"text3": "Pusat sport user"
 	},
 	"common": {
+		"in_box": "In the box......",
 		"collect_toast":"Gagal tambahkan ke favorit, coba sesaat lagi",
 		"account": "Akun",
 		"account_invalid": "Info akun kadaluarsa",
