--- a/src/i18n/pc/my-my/index.json
+++ b/src/i18n/pc/my-my/index.json
@@ -317,6 +317,7 @@
     "text3": "အားကစားအသုံးပြုသူအတွေ့အကြုံစင်တာ"
   },
   "common": {
+    "in_box": "In the box......",
     "account": "အကောင့်",
     "account_invalid": "အကောင့်အချက်အလက် မမှန်ပါ၊",
     "account_invalid2": "ကျေးဇူးပြု၍ ပြန်ထည့်ပါ။",
