--- a/src/i18n/pc/pt-br/index.json
+++ b/src/i18n/pc/pt-br/index.json
@@ -317,6 +317,7 @@
     "text3": "Centro de Experiência do Usuário Esportivo"
   },
   "common": {
+    "in_box": "In the box......",
     "account": "Conta",
     "account_invalid": "As informações da conta não são mais válidas",
     "account_invalid2": "Favor entrar novamente para ver",
