--- a/src/i18n/pc/vi-vn/index.json
+++ b/src/i18n/pc/vi-vn/index.json
@@ -320,6 +320,7 @@
     "text3": "Trung tâm trải nghiệm người chơi\r\n  thể thao"
   },
   "common": {
+    "in_box": "In the box......",
     "collect_toast": "Lưu không thành công, vui lòng thử lại sau",
     "account": "Tài khoản",
     "account_invalid": "Thông tin tài khoản đã bị vô\r\n  hiệu",
