--- a/src/i18n/h5/en-gb/index.json
+++ b/src/i18n/h5/en-gb/index.json
@@ -308,6 +308,7 @@
     "match_no": "Unfinished"
   },
   "common": {
+    "in_box": "In the box......",
     "temporarily_unavailable": "This feature is temporarily unavailable",
     "please_refresh": "Please refresh the page and try again",
     "all_notice": "All Announcements",
