--- a/src/i18n/h5/es-es/index.json
+++ b/src/i18n/h5/es-es/index.json
@@ -341,6 +341,7 @@
     "match_no": "Sin terminar"
   },
   "common": {
+    "in_box": "In the box......",
     "all_notice": "Todos los anuncios",
     "all_select": "Seleccionar todo",
     "analysis": "Análisis estadístico",
