--- a/src/i18n/h5/id-id/index.json
+++ b/src/i18n/h5/id-id/index.json
@@ -318,6 +318,7 @@
     "match_no": "Blm selesai"
   },
   "common": {
+    "in_box": "In the box......",
     "all_notice": "Semua notis",
     "all_select": "Pilih semua",
     "analysis": "Analisis stats",
