--- a/src/i18n/h5/pt-br/index.json
+++ b/src/i18n/h5/pt-br/index.json
@@ -327,6 +327,7 @@
     "match_no": "Inacabado"
   },
   "common": {
+    "in_box": "In the box......",
     "all_notice": "Todos os anúncios",
     "all_select": "Todas as seleções",
     "analysis": "Análise estatística",
