--- a/src/i18n/h5/th-th/index.json
+++ b/src/i18n/h5/th-th/index.json
@@ -308,6 +308,7 @@
     "match_no": "ยังไม่เสร็จ"
   },
   "common": {
+    "in_box": "In the box......",
     "temporarily_unavailable": "ฟีเจอร์นี้ใช้งานไม่ได้ชั่วคราว",
     "please_refresh": "โปรดรีเฟรชหน้าแล้วลองอีกครั้ง",
     "all_notice": "การแจ้งเตือนทั้งหมด",
