--- a/src/i18n/h5/vi-vn/index.json
+++ b/src/i18n/h5/vi-vn/index.json
@@ -309,6 +309,7 @@
     "match_no": "Chưa kết thúc"
   },
   "common": {
+    "in_box": "In the box......",
     "temporarily_unavailable": "Tính năng này tạm thời không khả dụng",
     "please_refresh": "Hãy làm mới trang và thử lại",
     "all_notice": "Tất cả thông báo",
