--- a/src/i18n/h5/zh-tw/index.json
+++ b/src/i18n/h5/zh-tw/index.json
@@ -309,6 +309,7 @@
     "match_no": "未完賽"
   },
   "common": {
+    "in_box": "抽盒中......",
     "temporarily_unavailable": "本功能暫不可用",
     "please_refresh": "請您刷新下頁面重試",
     "all_notice": "所有公告",
