解决：46947 【SIT】【H5新版复刻】【H5】已开始的赛事左下角半场比分/角球/红黄牌展示与设计图不一致(图标待上传)

--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -130,6 +130,9 @@
     },
     "v_sports": {
       "event_status": "赛事状态"
+    },
+    "detail": {
+      "half": "上半场"
     }
   },
   "ac_rules": {
