46712 【SIT】【H5新版复刻】【H5】赛事详情页，投注页面一片空白且未按UI

--- a/src/i18n/h5/es-es/index.json
+++ b/src/i18n/h5/es-es/index.json
@@ -1088,6 +1088,7 @@
     "add": "Más",
     "abandon": "Abandonada",
     "animation": "Animación",
+    "animation_info": "Animación Info",
     "ball": "Bola",
     "delay": "Retrasado",
     "cancel": "Cancelado",
@@ -1121,6 +1122,7 @@
     "match_parlay": "Parlay",
     "unknown": "Desconocido",
     "video": "Video",
+    "video_info": "Video Info",
     "Topic": "",
     "topic": ""
   },
