--- a/src/i18n/h5/mya-mya/index.json
+++ b/src/i18n/h5/mya-mya/index.json
@@ -1007,6 +1007,7 @@
     "add": "ပေါင်းသည်။",
     "abandon": "စွန့်ပယ်သည်။",
     "animation": "ကာတွန်း",
+    "animation_info": "ကာတွန်းအချက်အလက်",
     "ball": "ဘောလုံး",
     "delay": "နောက်ကျနေသည်။",
     "cancel": "ဖျက်သိမ်းလိုက်သည်။",
@@ -1040,6 +1041,7 @@
     "match_parlay": "",
     "unknown": "မသိ",
     "video": "ဗီဒီယို",
+    "video_info": "ဗီဒီယိုအချက်အလက်",
     "Topic": "",
     "topic": ""
   },
