--- a/src/i18n/h5/en-gb/index.json
+++ b/src/i18n/h5/en-gb/index.json
@@ -991,6 +991,7 @@
     "add": "Plus",
     "all_result": "All",
     "animation": "Animation",
+    "animation_info": "Animation Info",
     "ball": "Ball",
     "cancel": "Canceled",
     "delay": "Delayed",
@@ -1021,6 +1022,7 @@
     "total_score": "Current Total",
     "unknown": "Unknown",
     "video": "Video",
+    "video_info": "Video Info",
     "yes": "Yes",
     "match_parlay": "Parlay"
   },
