--- a/src/i18n/h5/ko-ko/index.json
+++ b/src/i18n/h5/ko-ko/index.json
@@ -1022,6 +1022,7 @@
     "add": "더하다",
     "abandon": "포기",
     "animation": "애니메이션",
+    "animation_info": "애니메이션 정보",
     "ball": "공",
     "delay": "지연",
     "cancel": "취소",
@@ -1055,6 +1056,7 @@
     "match_parlay": "조합배팅(다폴더)",
     "unknown": "알려지지 않은",
     "video": "비디오",
+    "video_info": "영상정보",
     "Topic": null,
     "topic": null
   },
