--- a/src/i18n/h5/th-th/index.json
+++ b/src/i18n/h5/th-th/index.json
@@ -1008,6 +1008,7 @@
     "add": "เพิ่ม",
     "all_result": "ผลลัพธ์",
     "animation": "แอนิเมชั่น",
+    "animation_info": "ข้อมูลภาพเคลื่อนไหว",
     "ball": "แย่",
     "cancel": "ยกเลิก",
     "delay": "ล่าช้า",
@@ -1038,6 +1039,7 @@
     "total_score": "คะแนนรวมปัจจุบัน",
     "unknown": "ไม่ได้กำหนด",
     "video": "วีดีโอ",
+    "video_info": "ข้อมูลวิดีโอ",
     "yes": "ใช่",
     "match_parlay": "ทีม"
   },
