--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -132,7 +132,10 @@
       "event_status": "赛事状态"
     },
     "detail": {
-      "half": "上半场"
+      "half": "上半场",
+      "not_data_Injury": "暂无伤停名单",
+      "not_data_substitute": "暂无替补名单",
+      "not_data_starter": "暂无首发名单"
     }
   },
   "ac_rules": {
