--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -20,7 +20,8 @@
       "all_cash_sess": "全部提前兑现成功",
       "cash_details": "提前兑现详情",
       "cash_rules": "提前兑现规则申明",
-      "explain": "<p>开云体育提前兑现只适用于指定赛事和盘口，如遇到赛事或盘口取消，提前兑现注单将会被收回重新结算。开云体育保留赛果最终解释权。</p><p>具体兑现规则请查看【帮助中心】-【开云体育提前兑现规则】</p>",
+      "explain1": "开云体育提前兑现只适用于指定赛事和盘口，如遇到赛事或盘口取消，提前兑现注单将会被收回重新结算。开云体育保留赛果最终解释权。",
+      "explain2": "具体兑现规则请查看【帮助中心】-【开云体育提前兑现规则】",
       "confirm_cancel_reservation": "确定取消本场比赛预约？"
     },
     "handicap_tutorial": {
