--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -506,6 +506,7 @@
     "info7": "提前结算金额调整中，请再试一次",
     "info8": "注单剩余本金",
     "info9": "提前结算可用次数",
+    "info10": "已提交申请，请耐心等待",
     "list1": "提前结算详情",
     "list2": "结算本金",
     "list3": "剩余本金",
