feat:困难艰难的初步完成赛果比分的展示，心智负担拉满，不知对错

--- a/src/i18n/h5/zh-cn/index.json
+++ b/src/i18n/h5/zh-cn/index.json
@@ -987,6 +987,15 @@
     "total_pp_score_count": "总分",
     "water_polo_countdown": "小于S%分钟"
   },
+  "match_results_title": {
+    "1": {
+      "title": [
+        "全场",
+        "上半场",
+        "下半场"
+      ]
+    }
+  },
   "list_title": {
     "1": {
       "title": [
